--- a/Resources/Prototypes/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/Catalog/uplink_catalog.yml
@@ -386,6 +386,21 @@
   categories:
     - UplinkExplosives
 
+- type: listing
+  id: UplinkBoxBrosGrenade
+  name: uplink-box-bros-grenade-name
+  description: uplink-box-bros-grenade-desc
+  productEntity: BoxBrosGrenade
+  cost:
+    Telecrystal: 16
+  categories:
+    - UplinkExplosives
+  conditions:
+  - !type:StoreWhitelistCondition
+    blacklist:
+      tags:
+      - NukeOpsUplink
+
 # Ammo
 
 - type: listing
