--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
@@ -424,6 +424,54 @@
 
 - type: entity
   parent: SmokeGrenade
+  id: BrosGrenade
+  name: brosnade
+  description: UNGH
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Grenades/brosnade.rsi
+  - type: SmokeOnTrigger
+    duration: 5
+    spreadAmount: 10
+    solution:
+      reagents:
+      - ReagentId: VentCrud
+        Quantity: 15
+  - type: SpawnOnTrigger
+    proto: MobBros
+    amount: 50
+  - type: SoundOnTrigger
+    sound: /Audio/Items/bros_grenade_smoke.ogg
+  - type: TimerTriggerVisuals
+    primingSound:
+      path: /Audio/Items/bros_grenade_prime.ogg
+
+- type: entity
+  parent: SmokeGrenade
+  id: SorbGrenade
+  name: sorbnade
+  description: UNGH
+  components:
+  - type: Sprite
+    sprite: Objects/Weapons/Grenades/sorbnade.rsi
+  - type: SmokeOnTrigger
+    duration: 5
+    spreadAmount: 10
+    solution:
+      reagents:
+      - ReagentId: VentCrud
+        Quantity: 15
+  - type: SpawnOnTrigger
+    proto: MobSorb
+    amount: 50
+  - type: SoundOnTrigger
+    sound: /Audio/Items/bros_grenade_smoke.ogg
+  - type: TimerTriggerVisuals
+    primingSound:
+      path: /Audio/Items/bros_grenade_prime.ogg
+
+- type: entity
+  parent: SmokeGrenade
   id: TearGasGrenade
   name: tear gas grenade
   description: A riot control tear gas grenade. Causes irritation, pain and makes you cry your eyes out.
