--- a/Resources/Prototypes/Entities/Mobs/Player/narsie.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/narsie.yml
@@ -51,19 +51,15 @@
         hard: false
         restitution: 0.8
         density: 99999
-        mask:
-        - AllMask
         layer:
-        - AllMask
+        - SingularityLayer
       EventHorizonConsumer:
         shape:
           !type:PhysShapeCircle
             radius: 5
         hard: false
-        mask:
-        - AllMask
         layer:
-        - AllMask
+        - SingularityLayer
   - type: Input
     context: "ghost"
   - type: MovementIgnoreGravity
