--- a/Resources/Prototypes/Entities/Structures/Power/Generation/Singularity/singularity.yml
+++ b/Resources/Prototypes/Entities/Structures/Power/Generation/Singularity/singularity.yml
@@ -30,19 +30,15 @@
         hard: true
         restitution: 0.8
         density: 99999
-        mask:
-        - AllMask
         layer:
-        - AllMask
+        - SingularityLayer
       EventHorizonConsumer:
         shape:
           !type:PhysShapeCircle
             radius: 0.35
         hard: false
-        mask:
-        - AllMask
         layer:
-        - AllMask
+        - SingularityLayer
   - type: Singularity
     energy: 180
     level: 1
