--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/maintenance.yml
@@ -365,7 +365,8 @@
         - ClothingMaskRaven
         - ClothingMaskJackal
         - ClothingMaskBat
-        - ClothingBeltSuspenders
+        - ClothingBeltSuspendersRed
+        - ClothingBeltSuspendersBlack
         - ClothingEyesEyepatch
         - ClothingEyesGlasses
         - ClothingHandsGlovesLatex
