The meat and potatoes
Yup

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -153,6 +153,7 @@
       - LightBulb
       - LedLightBulb
       - Bucket
+      - Ashtray
       - DrinkMug
       - DrinkMugMetal
       - DrinkGlass
