--- a/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/cargo.yml
@@ -8,6 +8,8 @@
       - id: ClothingOuterHardsuitSpatio
       - id: ClothingShoesBootsMag
       - id: ClothingMaskGasExplorer
+      - id: OxygenTankFilled
+      - id: NitrogenTankFilled
       - id: ClothingBeltUtilityFilled
       - id: SurvivalKnife
       - id: HandheldGPSBasic
