--- a/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
@@ -25,6 +25,10 @@
       children:
       - id: EmergencyOxygenTankFilled
       - id: OxygenTankFilled
+    - !type:GroupSelector
+      children:
+      - id: EmergencyNitrogenTankFilled
+      - id: NitrogenTankFilled
     - id: ToolboxEmergencyFilled
       prob: 0.5
     - id: MedkitOxygenFilled
@@ -81,6 +85,10 @@
       children:
       - id: EmergencyOxygenTankFilled
       - id: OxygenTankFilled
+    - !type:GroupSelector
+      children:
+      - id: EmergencyNitrogenTankFilled
+      - id: NitrogenTankFilled
     - id: CrowbarRed
     - !type:GroupSelector
       children:
