--- a/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
@@ -67,7 +67,7 @@
     containers:
       entity_storage: !type:AllSelector
         children:
-        - id: FireExtinguisherMiniCrowbar
+        - id: FireExtinguisherMini
 
 - type: entityTable
   id: FillLockerFireStandard
