--- a/Resources/Prototypes/Maps/boat.yml
+++ b/Resources/Prototypes/Maps/boat.yml
@@ -4,6 +4,7 @@
   mapPath: /Maps/boat.yml
   minPlayers: 40
   maxPlayers: 80
+  randomRotation: false
   stations:
     Boat:
       stationProto: StandardNanotrasenStation
