split canister volumes

--- a/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
+++ b/Resources/Prototypes/Entities/Structures/Storage/Canisters/gas_canisters.yml
@@ -116,7 +116,7 @@
         - state: yellow
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles: # List of gasses for easy reference
           - 0 # oxygen
           - 0 # nitrogen
@@ -152,7 +152,7 @@
           acts: [ "Destruction" ]
         - !type:DumpCanisterBehavior
 
-# Filled canisters, contain 18717.1051 moles each
+# Filled canisters, contain 1871.71051 moles each
 
 - type: entity
   parent: GasCanister
@@ -165,10 +165,10 @@
       - state: grey
   - type: GasCanister
     gasMixture:
-      volume: 10000
+      volume: 1000
       moles:
-        - 3930.592071 # oxygen 21%
-        - 14786.513029 # nitrogen 79%
+        - 393.0592071 # oxygen 21%
+        - 1478.6513029 # nitrogen 79%
       temperature: 293.15
   - type: Destructible
     thresholds:
@@ -205,9 +205,9 @@
       - state: blue
   - type: GasCanister
     gasMixture:
-      volume: 10000
+      volume: 1000
       moles:
-        - 18717.1051 # oxygen
+        - 1871.71051 # oxygen
       temperature: 293.15
   - type: Destructible
     thresholds:
@@ -241,9 +241,9 @@
   components:
   - type: GasCanister
     gasMixture:
-      volume: 10000
+      volume: 1000
       moles:
-        - 187107.1051 # oxygen
+        - 18710.71051 # oxygen
       temperature: 72
   - type: AccessReader
     access: [["Atmospherics"]]
@@ -259,10 +259,10 @@
         - state: red
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
-          - 18717.1051 # nitrogen
+          - 1871.71051 # nitrogen
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -296,10 +296,10 @@
   components:
   - type: GasCanister
     gasMixture:
-      volume: 10000
+      volume: 1000
       moles:
         - 0 # oxygen
-        - 187107.1051 # nitrogen
+        - 18710.71051 # nitrogen
       temperature: 72
   - type: AccessReader
     access: [["Atmospherics"]]
@@ -315,11 +315,11 @@
         - state: black
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
           - 0 # nitrogen
-          - 18717.1051 # CO2
+          - 1871.71051 # CO2
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -355,11 +355,11 @@
   components:
   - type: GasCanister
     gasMixture:
-      volume: 10000
+      volume: 1000
       moles:
         - 0 # oxygen
         - 0 # nitrogen
-        - 187107.1051 # CO2
+        - 18710.71051 # CO2
       temperature: 72
   - type: AccessReader
     access: [["Atmospherics"]]
@@ -375,12 +375,12 @@
         - state: orange
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
           - 0 # nitrogen
           - 0 # carbon dioxide
-          - 18717.1051 # plasma
+          - 1871.71051 # plasma
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -419,13 +419,13 @@
         - state: green
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
           - 0 # nitrogen
           - 0 # CO2
           - 0 # Plasma
-          - 18717.1051 # Tritium
+          - 1871.71051 # Tritium
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -464,14 +464,14 @@
         - state: water_vapor
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
           - 0 # nitrogen
           - 0 # CO2
           - 0 # Plasma
           - 0 # Tritium
-          - 18717.1051 # Water vapor
+          - 1871.71051 # Water vapor
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -508,7 +508,7 @@
         - state: greenys
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
           - 0 # nitrogen
@@ -516,7 +516,7 @@
           - 0 # Plasma
           - 0 # Tritium
           - 0 #  Water vapor
-          - 18717.1051 # Ammonia
+          - 1871.71051 # Ammonia
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -555,7 +555,7 @@
         - state: redws
     - type: GasCanister
       gasMixture:
-        volume: 10000
+        volume: 1000
         moles:
           - 0 # oxygen
           - 0 # nitrogen
@@ -564,7 +564,7 @@
           - 0 # Tritium
           - 0 #  Water vapor
           - 0 # Ammonia
-          - 18717.1051 # N2O
+          - 1871.71051 # N2O
         temperature: 293.15
     - type: Destructible
       thresholds:
@@ -601,7 +601,7 @@
     - state: frezon
   - type: GasCanister
     gasMixture:
-      volume: 10000
+      volume: 1000
       moles:
       - 0 # oxygen
       - 0 # nitrogen
@@ -611,7 +611,7 @@
       - 0 # Water vapor
       - 0 # Ammonia
       - 0 # N2O
-      - 18717.1051 # Frezon
+      - 1871.71051 # Frezon
       temperature: 293.15
   - type: Destructible
     thresholds:
