--- a/Resources/Prototypes/Recipes/Lathes/tools.yml
+++ b/Resources/Prototypes/Recipes/Lathes/tools.yml
@@ -22,6 +22,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Wirecutter
+  result: Wirecutter
   icon:
     sprite: Objects/Tools/wirecutters.rsi
     state: cutters-map
@@ -29,6 +30,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Screwdriver
+  result: Screwdriver
   icon:
     sprite: Objects/Tools/screwdriver.rsi
     state: screwdriver-map
@@ -36,12 +38,14 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Welder
+  result: Welder
   materials:
     Steel: 400
 
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Wrench
+  result: Wrench
   materials:
     Steel: 200
 
@@ -66,12 +70,14 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: CrowbarGreen
+  result: CrowbarGreen
   materials:
     Steel: 200
 
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Pickaxe
+  result: Pickaxe
   completetime: 4
   materials:
     Steel: 1000
@@ -80,6 +86,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Shovel
+  result: Shovel
   materials:
     Steel: 200
     Wood: 100
@@ -87,6 +94,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: Multitool
+  result: Multitool
   materials:
     Steel: 200
     Plastic: 200
@@ -94,10 +102,12 @@
 - type: latheRecipe
   parent: Multitool
   id: NetworkConfigurator
+  result: NetworkConfigurator
 
 - type: latheRecipe
   parent: BaseToolRecipe
   id: PowerDrill
+  result: PowerDrill
   materials:
     Steel: 600
     Plastic: 200
@@ -114,6 +124,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: RCDAmmo
+  result: RCDAmmo
   materials:
     Steel: 500
     Plastic: 250
@@ -126,19 +137,22 @@
 - type: latheRecipe
   parent: BaseBigToolRecipe
   id: HandheldGPSBasic
+  result: HandheldGPSBasic
 
 - type: latheRecipe
   parent: BaseBigToolRecipe
   id: TRayScanner
-  result: trayScanner # TODO: remove this line if the entity id gets cleaned up
+  result: trayScanner
 
 - type: latheRecipe
   parent: BaseBigToolRecipe
   id: GasAnalyzer
+  result: GasAnalyzer
 
 - type: latheRecipe
   parent: BaseToolRecipe
   id: SprayPainter
+  result: SprayPainter
   materials:
     Steel: 300
     Plastic: 100
@@ -164,6 +178,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: WelderExperimental
+  result: WelderExperimental
   completetime: 6
   materials:
     Steel: 800
@@ -172,6 +187,7 @@
 - type: latheRecipe
   parent: BaseToolRecipe
   id: JawsOfLife
+  result: JawsOfLife
   completetime: 6
   materials:
     Steel: 1000
