--- a/Resources/Prototypes/Recipes/Lathes/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/security.yml
@@ -31,12 +31,14 @@
 
 - type: latheRecipe
   id: Handcuffs
+  result: Handcuffs
   completetime: 2
   materials:
     Steel: 300
 
 - type: latheRecipe
   id: Zipties
+  result: Zipties
   completetime: 2
   materials:
     Plastic: 200
@@ -44,14 +46,17 @@
 - type: latheRecipe
   parent: BaseWeaponRecipe
   id: Stunbaton
+  result: Stunbaton
 
 - type: latheRecipe
   parent: BaseWeaponRecipe
   id: Truncheon
+  result: Truncheon
 
 - type: latheRecipe
   parent: BaseWeaponRecipe
   id: CombatKnife
+  result: CombatKnife
   materials:
     Steel: 250
     Plastic: 100
@@ -59,6 +64,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipeLong
   id: WeaponLaserCarbine
+  result: WeaponLaserCarbine
   materials:
     Steel: 2000
     Glass: 800
@@ -67,6 +73,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipeLong
   id: WeaponAdvancedLaser
+  result: WeaponAdvancedLaser
   materials:
     Steel: 1500
     Glass: 1000
@@ -75,6 +82,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipeLong
   id: WeaponLaserCannon
+  result: WeaponLaserCannon
   materials:
     Steel: 1250
     Plastic: 750
@@ -83,6 +91,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipeLong
   id: WeaponLaserSvalinn
+  result: WeaponLaserSvalinn
   materials:
     Steel: 2000
     Gold: 500
@@ -90,6 +99,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipeLong
   id: WeaponXrayCannon
+  result: WeaponXrayCannon
   materials:
     Steel: 1500
     Glass: 500
@@ -98,6 +108,7 @@
 
 - type: latheRecipe
   id: ClothingBackpackElectropack
+  result: ClothingBackpackElectropack
   completetime: 4
   materials:
     Steel: 500
@@ -106,12 +117,14 @@
 
 - type: latheRecipe
   id: ForensicPad
+  result: ForensicPad
   completetime: 4
   materials:
     Plastic: 100
 
 - type: latheRecipe
   id: ClothingEyesHudSecurity
+  result: ClothingEyesHudSecurity
   completetime: 2
   materials:
     Steel: 300
@@ -128,6 +141,7 @@
 
 - type: latheRecipe
   id: RiotShield
+  result: RiotShield
   completetime: 4
   materials:
     Steel: 400
@@ -135,6 +149,7 @@
 
 - type: latheRecipe
   id: TelescopicShield
+  result: TelescopicShield
   completetime: 4
   materials:
     Steel: 300
@@ -142,6 +157,7 @@
 
 - type: latheRecipe
   id: Flash
+  result: Flash
   completetime: 2
   materials:
     Glass: 100
@@ -151,6 +167,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxShellTranquilizer
+  result: BoxShellTranquilizer
   materials:
     Plastic: 240
     Steel: 160
@@ -160,6 +177,7 @@
 
 - type: latheRecipe
   id: TargetHuman
+  result: TargetHuman
   completetime: 5
   applyMaterialDiscount: false # ingredients dropped when destroyed
   materials:
@@ -168,32 +186,38 @@
 - type: latheRecipe
   parent: TargetHuman
   id: TargetClown
+  result: TargetClown
 
 - type: latheRecipe
   parent: TargetHuman
   id: TargetSyndicate
+  result: TargetSyndicate
 
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: MagazinePistolEmpty
+  result: MagazinePistolEmpty
   materials:
     Steel: 25
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazinePistol
+  result: MagazinePistol
   materials:
     Steel: 145
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazinePistolPractice
+  result: MagazinePistolPractice
   materials:
     Steel: 85
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazinePistolUranium
+  result: MagazinePistolUranium
   materials:
     Steel: 25
     Plastic: 65
@@ -202,6 +226,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazinePistolIncendiary
+  result: MagazinePistolIncendiary
   materials:
     Steel: 25
     Plastic: 120
@@ -209,48 +234,56 @@
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: MagazinePistolSubMachineGunEmpty
+  result: MagazinePistolSubMachineGunEmpty
   materials:
     Steel: 30
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazinePistolSubMachineGun
+  result: MagazinePistolSubMachineGun
   materials:
     Steel: 300
 
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: MagazinePistolSubMachineGunTopMountedEmpty
+  result: MagazinePistolSubMachineGunTopMountedEmpty
   materials:
     Steel: 30
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazinePistolSubMachineGunTopMounted
+  result: MagazinePistolSubMachineGunTopMounted
   materials:
     Steel: 300
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxPistol
+  result: MagazineBoxPistol
   materials:
     Steel: 600
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxMagnum
+  result: MagazineBoxMagnum
   materials:
     Steel: 240
 
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: MagazineRifleEmpty
+  result: MagazineRifleEmpty
   materials:
     Steel: 25
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineRifle
+  result: MagazineRifle
   materials:
     Steel: 475
 
@@ -258,12 +291,14 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineRiflePractice
+  result: MagazineRiflePractice
   materials:
     Steel: 175
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineRifleUranium
+  result: MagazineRifleUranium
   materials:
     Steel: 25
     Plastic: 300
@@ -272,6 +307,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineRifleIncendiary
+  result: MagazineRifleIncendiary
   materials:
     Steel: 25
     Plastic: 450
@@ -279,18 +315,21 @@
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: MagazineLightRifleEmpty
+  result: MagazineLightRifleEmpty
   materials:
     Steel: 25
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineLightRifle
+  result: MagazineLightRifle
   materials:
     Steel: 565
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineLightRiflePractice
+  result: MagazineLightRiflePractice
   materials:
     Steel: 205
 
@@ -298,6 +337,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineLightRifleUranium
+  result: MagazineLightRifleUranium
   materials:
     Steel: 25
     Plastic: 360
@@ -306,6 +346,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineLightRifleIncendiary
+  result: MagazineLightRifleIncendiary
   materials:
     Steel: 25
     Plastic: 540
@@ -313,24 +354,28 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxRifle
+  result: MagazineBoxRifle
   materials:
     Steel: 750
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxLightRifle
+  result: MagazineBoxLightRifle
   materials:
     Steel: 900
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxLethalshot
+  result: BoxLethalshot
   materials:
     Steel: 320
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxBeanbag
+  result: BoxBeanbag
   materials:
     Steel: 160
     Plastic: 240
@@ -338,6 +383,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxShotgunSlug
+  result: BoxShotgunSlug
   materials:
     Steel: 240
     Plastic: 160
@@ -345,24 +391,28 @@
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: SpeedLoaderMagnumEmpty
+  result: SpeedLoaderMagnumEmpty
   materials:
     Steel: 50
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: SpeedLoaderMagnum
+  result: SpeedLoaderMagnum
   materials:
     Steel: 190
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: SpeedLoaderMagnumPractice
+  result: SpeedLoaderMagnumPractice
   materials:
     Steel: 90
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: SpeedLoaderMagnumUranium
+  result: SpeedLoaderMagnumUranium
   materials:
     Steel: 50
     Plastic: 150
@@ -371,6 +421,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: SpeedLoaderMagnumIncendiary
+  result: SpeedLoaderMagnumIncendiary
   materials:
     Steel: 50
     Plastic: 150
@@ -378,18 +429,21 @@
 - type: latheRecipe
   parent: BaseEmptyAmmoRecipe
   id: MagazineShotgunEmpty
+  result: MagazineShotgunEmpty
   materials:
     Steel: 50
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineShotgun
+  result: MagazineShotgun
   materials:
     Steel: 240
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineShotgunBeanbag
+  result: MagazineShotgunBeanbag
   materials:
     Steel: 150
     Plastic: 140
@@ -397,6 +451,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineShotgunSlug
+  result: MagazineShotgunSlug
   materials:
     Steel: 190
     Plastic: 100
@@ -404,6 +459,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineShotgunIncendiary
+  result: MagazineShotgunIncendiary
   materials:
     Steel: 100
     Plastic: 190
@@ -411,30 +467,35 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxPistolIncendiary
+  result: MagazineBoxPistolIncendiary
   materials:
     Plastic: 600
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxMagnumIncendiary
+  result: MagazineBoxMagnumIncendiary
   materials:
     Plastic: 240
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxLightRifleIncendiary
+  result: MagazineBoxLightRifleIncendiary
   materials:
     Plastic: 900
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxRifleIncendiary
+  result: MagazineBoxRifleIncendiary
   materials:
     Plastic: 750
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxShotgunFlare
+  result: BoxShotgunFlare
   materials:
     Steel: 80
     Plastic: 80
@@ -442,6 +503,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxShotgunIncendiary
+  result: BoxShotgunIncendiary
   materials:
     Steel: 80
     Plastic: 320
@@ -449,30 +511,35 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxPistolPractice
+  result: MagazineBoxPistolPractice
   materials:
     Steel: 300
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxMagnumPractice
+  result: MagazineBoxMagnumPractice
   materials:
     Steel: 60
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxLightRiflePractice
+  result: MagazineBoxLightRiflePractice
   materials:
     Steel: 300
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxRiflePractice
+  result: MagazineBoxRiflePractice
   materials:
     Steel: 250
 
 - type: latheRecipe
   parent: BaseWeaponRecipe
   id: WeaponLaserCarbinePractice
+  result: WeaponLaserCarbinePractice
   completetime: 6
   materials:
     Steel: 1800
@@ -482,6 +549,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipe
   id: WeaponDisablerPractice
+  result: WeaponDisablerPractice
   completetime: 4
   materials:
     Steel: 500
@@ -491,12 +559,14 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxShotgunPractice
+  result: BoxShotgunPractice
   materials:
     Steel: 80
 
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxPistolUranium
+  result: MagazineBoxPistolUranium
   materials:
     Plastic: 300
     Uranium: 600
@@ -504,6 +574,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxMagnumUranium
+  result: MagazineBoxMagnumUranium
   materials:
     Plastic: 240
     Uranium: 180
@@ -511,6 +582,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxLightRifleUranium
+  result: MagazineBoxLightRifleUranium
   materials:
     Plastic: 600
     Uranium: 600
@@ -518,6 +590,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: MagazineBoxRifleUranium
+  result: MagazineBoxRifleUranium
   materials:
     Plastic: 500
     Uranium: 500
@@ -525,6 +598,7 @@
 - type: latheRecipe
   parent: BaseAmmoRecipe
   id: BoxShotgunUranium
+  result: BoxShotgunUranium
   materials:
     Plastic: 320
     Uranium: 240
@@ -532,6 +606,7 @@
 - type: latheRecipe
   parent: BaseWeaponRecipe
   id: WeaponDisabler
+  result: WeaponDisabler
   completetime: 6
   materials:
     Steel: 300
@@ -541,6 +616,7 @@
 - type: latheRecipe
   parent: WeaponDisabler
   id: WeaponDisablerSMG
+  result: WeaponDisablerSMG
   materials:
     Steel: 1000
     Glass: 500
@@ -548,6 +624,7 @@
 
 - type: latheRecipe
   id: MagazineGrenadeEmpty
+  result: MagazineGrenadeEmpty
   completetime: 3
   materials:
     Steel: 150
@@ -555,6 +632,7 @@
 
 - type: latheRecipe
   id: GrenadeEMP
+  result: GrenadeEMP
   completetime: 3
   materials:
     Steel: 150
@@ -563,6 +641,7 @@
 
 - type: latheRecipe
   id: GrenadeBlast
+  result: GrenadeBlast
   completetime: 3
   materials:
     Steel: 450
@@ -571,6 +650,7 @@
 
 - type: latheRecipe
   id: GrenadeFlash
+  result: GrenadeFlash
   completetime: 3
   materials:
     Steel: 150
@@ -579,6 +659,7 @@
 
 - type: latheRecipe
   id: PortableRecharger
+  result: PortableRecharger
   completetime: 15
   materials:
     Steel: 2000
